[project]
name = "pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.1.1",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "quantlib>=1.43",
    "tabula-py>=2.10.0",
]
